Squashed commit of the following:
commit 069f81fc3c87c437eceff756ddca7a4c1b58044d
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Feb 24 22:33:34 2024 -0500

    feat: #3 setup mode, admin signup, fixes, and contianerize!

commit 97ffede9eb312fca0257afa06969d47a12703f3b
Author: vnugent <public@vaughnnugent.com>
Date:   Mon Feb 19 22:26:03 2024 -0500

    feat: new account setup and invitation links

commit 1c8f59bc0a1b25ce5013b0f1fc7fa73c0de415d6
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Feb 15 16:49:59 2024 -0500

    feat: update packages, drag/drop link, and fix some button padding

--- a/ci/config/config.json
+++ b/ci/config/config.json
@@ -84,6 +84,7 @@
         "X-Content-Type-Options": "nosniff",
         "X-Xss-Protection": "1; mode=block",
         "X-Frame-Options": "DENY",
+        "Server":"VNLib.Webserver",
         "Content-Security-Policy": "default-src 'self' 'unsafe-inline'; img-src 'self' blob: data:; frame-src 'none'; object-src 'none'; referrer no-referrer-when-downgrade; upgrade-insecure-requests; block-all-mixed-content;"
       },
 
@@ -125,7 +126,7 @@
     "reload_delay_sec": 2,
     "path": "plugins",
     "config_dir": "config",
-    "assets": "plugins/assets"
+    "assets": "plugins/assets/"
   },
 
   "disabled sys_log": {
@@ -148,15 +149,9 @@
 
   //Sql for the users database
   "sql": {
-    "db_type": "sqlite", //mysql, mssql(default), sqlite
-    "source": "simple-bookmark.db" //For sqlite only
-
-    //"hostname": "example.com",
-    //"username": "simple-bookmark",
-    //"catalog": "simple-bookmark",
-    //"min_pool_size": 5,
-    //"ms_security": false
-    //"trust_cert": false
+    "debug": false,
+    "provider": "VNLib.Plugins.Extensions.Sql.SQLite.dll",
+    "source": "simple-bookmark.db" //For sqlite only 
   },
 
   //caching should be setup globally after VNCache #78a47dd
