--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,11 +14,13 @@
     "dev": "vite",
     "watch": "vite build --watch --mode development --minify false",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "update": "npm update",
+    "oudated": "npm outdated"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.17",
-    "@vnuge/vnlib.browser": "https://www.vaughnnugent.com/public/resources/software/builds/Plugins.Essentials/eb9752ab262522271ccaf1ff127658b7202289a4/@vnuge-vnlib.browser/release.tgz",
+    "@vnuge/vnlib.browser": "https://www.vaughnnugent.com/public/resources/software/builds/Plugins.Essentials/f2ac807486a00db4ba8486133d567e392f0fe98a/@vnuge-vnlib.browser/release.tgz",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.3.x",
