--- a/ci/install.taskfile.yaml
+++ b/ci/install.taskfile.yaml
@@ -13,7 +13,7 @@ tasks:
     #make the plugin directory
     - cmd: powershell -Command "mkdir {{.DIR}} -Force"
       ignore_error: true
-    - cd {{.DIR}} && powershell "{{ .PROJECT_DIR }}/install.ps1" -BaseUrl {{.BUILDS_URL}} -ModuleName {{.MODULE_NAME}} -ProjectName {{.PROJECT_NAME}} -FileName {{.FILE_NAME}}
+    - cd {{.DIR}} && powershell "{{ .PROJECT_DIR }}/install.ps1" -BaseUrl {{.BUILDS_URL}} -ModuleName {{.MODULE_NAME}} -ProjectName {{.PROJECT_NAME}} -FileName {{.FILE_NAME}} -Version {{.VERSION}}
     - cd {{.DIR}} && tar -xzf {{.FILE_NAME}}
     #remove the archive file
     - cd {{.DIR}} && powershell -Command "rm {{.FILE_NAME}}"
